Force SVG gradients to work in premultiplied alpha mode

WARNING: That is against SVG2 specification!

All internal Krita structures, including GUI editor, expect the gradients to work
in premultiplied alpha mode. The change that happened in SvgParser in 2021
changed the behavior of the loading code only. All GUI controls still create
premultiplied gradients, which caused inconsistencies when loading gradients
created in Krita.

What we need to do is to implement a proper support of non-premultiplied
gradients. That includes the following:

1) All GUI controls should support switching the two modes:

   * Stop Gradient Editor
   * Segment Gradient Editor

2) A proper backward compatibility should be present when loading
    gradients from external buffers:

    * SVG gradients (it is a part of .kra format)
    * ASL gradients (questionable)
    * Gimp gradients (questionable)
    *  XML gradietns saved in Fill Layers and Filters

3) Raster gradients painted with KoMixOp should also support
    non-premultiplied mode

4) FgToTransparent auto-gradient should  properly handle the
    "FgTransparent" option.

CC:kimageshop@kde.org
BUG:502118