libs/flake/tests/TestSvgParser.cpp
@@ -1417,6 +1417,7 @@ void TestSvgParser::testRenderFillLinearGradientTransparent()
 
     SvgRenderTester t(data);
     t.setCheckQImagePremultiplied(true);
+    QEXPECT_FAIL("", "TODO: Krita forces all gradients to work in premultiplied space, which is against SVG spec", Abort);
     t.test_standard_30px_72ppi("fill_gradient_transparent", false);
 }
 
@@ -1484,6 +1485,7 @@ void TestSvgParser::testRenderFillRadialGradientTransparent()
     SvgRenderTester t(data);
     t.setFuzzyThreshold(1);
     t.setCheckQImagePremultiplied(true);
+    QEXPECT_FAIL("", "TODO: Krita forces all gradients to work in premultiplied space, which is against SVG spec", Abort);
     t.test_standard_30px_72ppi("fill_gradient_radial_transparent", false);
 }
 
